--- a/aboutus.html
+++ b/aboutus.html
@@ -17,7 +17,7 @@
 
     <header class="jumbotron">
         <div class="container">
-            <div  class="col-11 col-sm-7 col-md-3 col-lg-8">
+            <div  class="col-13 col-sm-8 col-lg-8">
                 <div class=" align-item-center">
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. &nbsp;Our&nbsp;lipsmacking creations will tickle your culinary senses!</p>
