--- a/aboutus.html
+++ b/aboutus.html
@@ -14,10 +14,26 @@
 </head>
 
 <body>
-
+<nav class="navbar navbar-dark navbar-expand-sm fixed-top">
+        <div class="container">
+             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+           <a class="navbar-brand mr-auto" href="./index.html">Ristorante Con Fusion</a>
+             <div class="collapse navbar-collapse" id="Navbar">
+               <ul class="navbar-nav mr-auto">
+                    <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="#">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                </ul>  
+            </div>
+                          
+        </div>
+    </nav>
     <header class="jumbotron">
         <div class="container">
-            <div  class="col-11 col-sm-8 col-lg-8">
+            <div  class="col-12 col-sm-6 col-lg-8">
                 <div class=" align-item-center">
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. &nbsp;Our&nbsp;lipsmacking creations will tickle your culinary senses!</p>
@@ -29,8 +45,12 @@
     </header>
 
     <div class="container">
-        <div>
-            <div>
+        <div class="row">
+            <ol class="col-12 breadcrumb">
+            <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+                <li class="breadcrumb-item active">About Us</li>
+            </ol>
+            <div class="col-12">
                <h3>About Us</h3>
                <hr>
             </div>
@@ -70,7 +90,7 @@
                 <div class="col-4 offset-1 col-sm-2">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#">Home</a></li>
+                        <li><a href="./index.html">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Menu</a></li>
                         <li><a href="#">Contact</a></li>
